# veil-rs

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .review-bundle.include  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  README_EN.md  RELEASING.md  ROADMAP.md  acceptance_gate.sh  action.yml  commit_msg.txt  cspell.json  docker-compose.yml  flake.nix  go.mod  implementation_plan.md  localgc  pr46_description_template.md  prkit  repro_plan.md  reviewbundle  test.html  test_output.txt  test_output_2.txt  test_summary.html  v1.0.0_release_notes.md  veil.ci.toml  veil.example.toml  veil.toml  walkthrough.md
.githooks/: pre-commit
crates/veil-cli/: Cargo.toml
crates/veil-cli/src/: cli.rs  config_loader.rs  main.rs
crates/veil-cli/src/commands/: check_project.rs  config.rs  doctor.rs  exceptions.rs  filter.rs  fix.rs  git.rs  guardian.rs  ignore.rs  init.rs  interactive_scan.rs  lsp.rs  mask.rs  mod.rs  pre_commit.rs  rules.rs  scan.rs  sot.rs  triage.rs  update.rs  verify.rs
crates/veil-cli/src/formatters/: html.rs  json.rs  markdown.rs  mod.rs  table.rs
crates/veil-cli/src/output/: formatter.rs
crates/veil-cli/src/templates/: ci_github.yml
crates/veil-cli/src/templates/sot/: sot_v1.md
crates/veil-cli/tests/: baseline_apply_test.rs  baseline_error_test.rs  baseline_test.rs  baseline_ux_test.rs  binary_large_test.rs  ci_flags_test.rs  config_dump_test.rs  exceptions_flags_test.rs  exit_code_test.rs  filter_config_test.rs  filter_rules_pack_test.rs  html_baseline_test.rs  html_report_test.rs  init_log_pack_test.rs  init_test.rs  json_contract_tests.rs  json_schema_version_test.rs  output_purity_test.rs  policy_test.rs  precommit_test.rs  preset_cli_test.rs  rules_test.rs  scan_hang_test.rs  sot_new_test.rs  sot_rename_test.rs  staged_test.rs  verify_tests.rs
crates/veil-cli/tests/cmd/: help.toml  lsp-help.toml  smoke_config_check.toml  smoke_filter.toml  smoke_mask_dryrun.toml  smoke_scan_json.toml  smoke_version.toml
crates/veil-cli/tests/cmd/fixtures/: log.txt  secret.txt
crates/veil-cli/tests/cmd/fixtures/clean/: safe.txt
crates/veil-cli/tests/contracts/: simple-project.expected.json
crates/veil-cli/tests/contracts/simple-project/data/: sample.env
crates/veil-cli/tests/contracts/simple-project/src/: main.rs
crates/veil-cli/tests/trycmd/pr44_exception_registry/: add.trycmd  cleanup.trycmd  doctor.trycmd  help.trycmd  list.trycmd  remove.trycmd  scan_excepted.trycmd  scan_hints.trycmd  scan_registry.trycmd  update.trycmd
crates/veil-core/: Cargo.toml
crates/veil-core/benches/: scan_benchmark.rs
crates/veil-core/examples/: gen_docs.rs
crates/veil-core/src/: baseline.rs  finding_id.rs  lib.rs  registry.rs  remote.rs  scoring.rs  verify.rs
crates/veil-core/src/masking/: mod.rs
crates/veil-core/src/metrics/: aggregate.rs  hint.rs  mod.rs  reason.rs  taxon.rs
crates/veil-core/src/model/: mod.rs
crates/veil-core/src/rules/: builtin.rs  grade.rs  mod.rs  pack.rs  scoring.rs
crates/veil-core/src/scanner/: jp_normalize.rs  mod.rs  result.rs  utils.rs
crates/veil-core/src/summary/: v1.rs
crates/veil-core/src/validators/: jp.rs  mod.rs
crates/veil-core/tests/: dogfood_schema.rs  dos_safety.rs  golden_metrics.rs  jp_pii_fixture_tests.rs  jp_security_critical_pack_tests.rs  lock_busy_proof.rs  rule_tests.rs
crates/veil-core/tests/golden/: metrics_v1.canonical.json
crates/veil-core/tests/helpers/: mod.rs
crates/veil-guardian/: Cargo.toml
crates/veil-guardian/src/: advisories.json5  db.rs  lib.rs  metrics.rs  models.rs  report.rs  scanner.rs
crates/veil-guardian/src/guardian_next/: error.rs  fetcher.rs  mod.rs  outcome.rs  types.rs
crates/veil-guardian/src/guardian_next/cache/: disk.rs  memory.rs  mod.rs
crates/veil-guardian/src/guardian_next/net/: concurrency.rs  http_client.rs  mod.rs  retry.rs  singleflight.rs
crates/veil-guardian/src/providers/: mod.rs  npm.rs  pnpm.rs  yarn.rs
crates/veil-guardian/src/providers/osv/: cache.rs  client.rs  details.rs  details_store.rs  mod.rs
crates/veil-guardian/src/providers/osv/net/: mod.rs  retry.rs  sleeper.rs  timeout.rs
crates/veil-guardian/src/util/: atomic_write.rs  file_lock.rs  key.rs  mod.rs
crates/veil-guardian/tests/: atomic_write.rs  basic.rs  coalescing.rs  contract_osv_fixtures.rs  file_lock.rs  guardian_next_retry.rs  guardian_next_singleflight.rs  key_versioning.rs  live_osv_api.rs  metrics.rs  npm_integration.rs  osv_concurrency.rs  osv_details_flow.rs  osv_operator_ux.rs  osv_retry.rs  osv_retry_metrics.rs  pnpm_integration.rs  report_output.rs  yarn_integration.rs
crates/veil-guardian/tests/snapshots/: report_output__report_grouping_logic.snap  report_output__report_output_deterministic.snap  report_output__report_output_deterministic.snap.bak  report_output__report_output_duplicates.snap
crates/veil-lsp/: Cargo.toml
crates/veil-lsp/src/: code_actions.rs  diagnostics.rs  document_store.rs  lib.rs  main.rs  server.rs
crates/veil-lsp/tests/: utf16_range_fixture_test.rs
crates/veil-lsp/tests/fixtures/utf16/: email_emoji_prefix.txt  email_fullwidth_prefix.txt
crates/veil-pro/: Cargo.toml
crates/veil-pro/frontend/: package-lock.json  package.json  vite.config.ts
crates/veil-pro/frontend/src/: App.svelte  app.css
crates/veil-pro/frontend/src/lib/: Dashboard.svelte  Login.svelte  PolicyView.svelte  ScanView.svelte  api-contract.ts  ui-state.ts
crates/veil-pro/src/: api.rs  auth.rs  config_loader.rs  evidence.rs  evidence_generator.rs  main.rs
crates/veil-pro/src/api/: dto.rs
crates/veil-server/: Cargo.toml
crates/veil-server/migrations/: 20251207000000_init.sql
crates/veil-server/src/: db.rs  main.rs
crates/veil-server/src/api/: mod.rs
docs/: DEVELOPMENT.md  DEVELOPMENT_EN.md  README.md  SSOT.md  TESTING_SECRETS.md  json-schema.md  rules.md  security_review.md
examples/: gen_docs.rs  veil-log.toml  veil.summary.v1.json
ops/: cleanFormatter  cleanFormatter.sh  exceptions.toml  guardrails_validate.py  review_bundle.sh
repro_test/: test_pii.txt
schemas/: json-schema.finding.json  (+8 more)
scripts/: doc.sh  (+11 more)
(+1840 files in other folders)
