[workspace]
members = [
    "crates/veil-core",
    "crates/veil-cli",
    "crates/veil-config",
    "crates/veil-server",
    "crates/veil-guardian",
]
resolver = "2"

[workspace.package]
version = "0.10.0"
rust-version = "1.82.0"
edition = "2021"

[workspace.dependencies]
veil-core = { path = "crates/veil-core", version = "0.10.0" }
veil-guardian = { path = "crates/veil-guardian", version = "0.10.0" }
veil-config = { path = "crates/veil-config", version = "0.10.0" }
veil-server = { path = "crates/veil-server", version = "0.10.0" }

[profile.bench]
opt-level = 3
debug = 0
lto = "thin"
codegen-units = 1
