[package]
name = "veil-core"
version = "0.11.2"
edition = "2021"
rust-version.workspace = true

[dependencies]
regex = "1.10.4"
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1.10"
ignore = "0.4"
veil-config = { path = "../veil-config" }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "scan_benchmark"
harness = false
