[package]
name = "veil-core"
version = "0.17.0-rc.2"
edition = "2021"
rust-version.workspace = true

[dependencies]
regex = "1.10.4"
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1.10"
ignore = "0.4"
veil-config = { path = "../veil-config" }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
toml = "0.8"
rust-embed = "8.4"

[dev-dependencies]
divan = "0.1"
valico = "4.0.0"

[[bench]]
name = "scan_benchmark"
harness = false
