[package]
name = "veil-core"
version = "0.17.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
regex = "1.10.4"
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1.10"
ignore = "0.4"
veil-config = { path = "../veil-config" }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
toml = "0.8"
rust-embed = "8.4"
blake3 = "1.8.3"
data-encoding = "2.10.0"
fs2 = "0.4.3"
tempfile = "3.24.0"

[dev-dependencies]
divan = "0.1"
tempfile = "3.24.0"
valico = "4.0.0"

[[bench]]
name = "scan_benchmark"
harness = false
