[package]
name = "veil-lsp"
version = "0.17.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "veil-lsp"
path = "src/main.rs"

[dependencies]
veil-core = { workspace = true }
veil-config = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
