[package]
name = "veil-server"
version = "0.17.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx-core = { version = "0.8", default-features = false, features = ["json", "migrate", "rustls"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["json", "migrate"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
base64ct = "=1.6.0"
